2009-08-10
	* Add day and date data_type to $weather_forecast

2009-08-03
	* Added support for $weather_forecast (experimental)

2009-08-01
	* Added support for out_to_ncurses

2009-07-31
	* Removed alias config option due to brokenness
	* Added support for $include

2009-07-29
	* Add icon data_type for xoap weather

2009-07-23
	* Changed xoap parsing method to xpath, in preparation to include
	forecast data

2009-07-19
	* Fixed out-of-tree builds
	* Update MPD elapsed/progress when stopped (sf.net #2792113)
	* Overhauled RSS and weather, added $curl

2009-07-18
	* Added compilation switch --enable-xoap to be able to use
	www.weather.com as a source of weather data (this avoids adding
	libxml2 as a required dependency for users that wish to use noaa
	and not weather.com)
	* Added support for X alignment across multi-lined objects (i.e., using
	$alignr with $exec)
	* Disabled OpenMP code until GCC's implementation stabilizes
	* www.weather.com can now be used as well as a source of weather data

2009-07-11
	* Added support for $desktop, $desktop_number and $desktop_name (sf.net #2040528)

2009-07-09
	* Added support for $swapfree
	* Improved Lua API (lua_read_parse has been removed in favour of the
	conky_parse() Lua API call)
	* Introduced new Lua Cairo and Imlib2 bindings

2009-07-08
	* Fixed a couple memory-related bugs

2009-07-06
	* Added support for $weather (experimental)

2009-07-04
	* Remove newline with comment only lines in TEXT
	* Improved parsing of graph arguments, removed "log"|"normal" arguments in
	favour of -l switch

2009-07-01
	* Fix escaping of comments in TEXT (sf.net #2813390, thanks Nils)

2009-06-29
	* Fix segfault in to_real_path, it's sometimes called with the same
	source and dest without checking the length, causing a segfault.

2009-06-20
	* Use the internal process list for if_running on Linux

2009-06-14
	* Fix XMMS2 related crash (sf.net #2806111 and #2805310, thanks Lassi)

2009-06-13
	* Added support for $blink