@@ -3,7 +3,10 @@
 #ifndef HDDTEMP_H_
 #define HDDTEMP_H_
 
-int scan_hddtemp(const char *arg, char **dev, char **addr, int *port);
-char *get_hddtemp_info(char *dev, char *addr, int port);
+void set_hddtemp_host(const char *);
+void set_hddtemp_port(const char *);
+void update_hddtemp(void);
+void free_hddtemp(void);
+int get_hddtemp_info(const char *, short *, char *);
 
 #endif /*HDDTEMP_H_*/
